--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Hubspot</title>
   </head>
   <body>
+
     <!-- Fixed Navigator -->
     <div class="fixed_container">
       <nav class="clearfix">
@@ -48,7 +49,6 @@
           <div class="mini_trial">Get started with Free tools, and upgrade as you grow.</div>
         </div>
       </div>
-
     </header>
 
     <!-- Section Splitter -->
@@ -90,11 +90,12 @@
 
         </div>
       </div>
+
       <!-- Third Frame -->
       <div class="third_frame">
         <div class="third_mini clearfix">
           <div class="left column float_left">
-            <div class="upper_imgs" src="img/markhub.svg" id="Marketing_Hub"></div>
+            <img class="upper_imgs" src="img/markhub.svg"></img>
             <h3>Mrketing Hub</h3>
             <p>Marketing software to help you grow traffic, convert more visitors, and run complete inbound
              marketing campaings at scale</p>
@@ -108,7 +109,7 @@
           </div>
 
           <div class="center column float_left">
-            <div class="upper_imgs" src="img/proillustration.svg" id="Sales_Hub"></div>
+            <img class="upper_imgs" src="img/proillustration.svg"></img>
             <h3>Sales Hub</h3>
             <p>Time-saving sales software that helps you get deeper insights into prospects, automate the task you hate, and close more deals faster.</p>
              <h5>POPOLAR FEATURE</h5>
@@ -121,7 +122,7 @@
           </div>
 
           <div class="right column float_left">
-            <div class="upper_imgs" src="img/table.svg" id="Service_Hub"></div>
+            <img class="upper_imgs" src="img/table.svg"></img>
             <h3>Service Hub</h3>
             <p>Customer Service software to help you connect with customers, exceed expectations, and turn them into promotes that grow your business.</p>
              <h5>POPOLAR FEATURE</h5>
@@ -134,6 +135,7 @@
           </div>
         </div>
       </div>
+
       <!-- Fourth Frame -->
       <div class="fourth_frame">
         <div class="fourth_mini clearfix">
@@ -144,22 +146,22 @@
           <div class="fourth_box_container">
             <div class="box_row_up">
               <div class="mini_box float_left">
-                <div class="box_image" id="hands"></div>
+                <img src="img/handshake.svg" alt="Hands" class="box_image" ></img>
                 <h1>150+</h1>
                 <span>HubSpot user groups</span>
               </div>
               <div class="mini_box float_left">
-                <div  class="box_image" id="blogs"></div>
+                <img src="img/hubspotblog.svg"  alt="HubSpotBlog" class="box_image" id="blogs"></img>
                 <h1>4,5M+</h1>
                 <span>monthly visit</span>
               </div>
               <div class="mini_box float_left">
-                <div  class="box_image" id="academy"></div>
+                <img  src="img/academy.svg" alt="Academy" class="box_image" id="academy"></img>
                 <h1>155k+</h1>
                 <span>certified professionals</span>
               </div>
               <div class="mini_box float_left">
-                <div  class="box_image" id="inbound"></div>
+                <img src="img/inbound.svg" alt="Inbound" class="box_image" id="inbound"></img>
                 <h1>21k+</h1>
                 <span>registered attendees</span>
               </div>
@@ -167,22 +169,22 @@
 
             <div class="box_row_down">
               <div class="mini_box float_left">
-                <div  class="box_image" id="connect"></div>
+                <img src="img/hubspotconnect.svg" alt="hubspotconnect" class="box_image" id="connect"></img>
                 <h1>200+</h1>
                 <span>integrations</span>
               </div>
               <div class="mini_box float_left">
-                <div  class="box_image" id="world"></div>
+                <img src="img/communityglobe.svg" alt="Community Globe" class="box_image" id="world"></img>
                 <h1>6+</h1>
                 <span>languages</span>
               </div>
               <div class="mini_box float_left">
-                <div  class="box_image" id="chat"></div>
+                <img src="img/communityfollowers.svg" alt="Community Followers" class="box_image" id="chat"></img>
                 <h1>2.6+M</h1>
                 <span>social followers</span>
               </div>
               <div class="mini_box float_left">
-                <div class="box_image" id="growthub"></div>
+                <img src="img/growthhub.svg" alt="growthHub" class="box_image" id="growthub"></img>
                 <h1>5k+</h1>
                 <span>profiles and counting</span>
               </div>
@@ -190,6 +192,7 @@
           </div>
         </div>
       </div>
+
       <!-- Fifth Frame -->
       <div class="fifth_frame">
         <div class="fifth_mini">
@@ -199,14 +202,14 @@
               <p>customers in over <span>100</span> countries growing their business with HubSpot</p>
             </div>
             <div class="right_upframe float_left">
-              <div class="partners_imgs float_left" id="Sound_Cloud"></div>
-              <div class="partners_imgs float_left" id="WWF_Logo"></div>
-              <div class="partners_imgs float_left" id="Trello_Logo"></div>
-              <div class="partners_imgs float_left" id="Vmware_Logo"></div>
-              <div class="partners_imgs float_left" id="G2_Logo"></div>
-              <div class="partners_imgs float_left" id="Class_Pass"></div>
-              <div class="partners_imgs float_left" id="Subaru_Logo"></div>
-              <div class="partners_imgs float_left" id="Monkey_Logo"></div>
+              <img src="img/soundcloud.webp" alt="Sound_Cloud" class="partners_imgs float_left"></img>
+              <img src="img/wwf.webp" class="partners_imgs float_left"></img>
+              <img src="img/trello.webp" alt="Trello_Logo" class="partners_imgs float_left"></img>
+              <img src="img/vmware.webp" alt="Vmware" class="partners_imgs float_left"></img>
+              <img src="img/g2.webp" alt="G2_Logo" class="partners_imgs float_left" ></img>
+              <img src="img/classpass.webp" alt="Class_Pass" class="partners_imgs float_left"></img>
+              <img src="img/subaru.webp" alt="Subaru_Logo" class="partners_imgs float_left"></img>
+              <img src="img/monkey.svg" alt="Monkey_Logo" class="partners_imgs float_left"></img>
             </div>
           </div>
           <div class="lower_frame clearfix">
