--- a/index.html
+++ b/index.html
@@ -151,17 +151,17 @@
                 <span>HubSpot user groups</span>
               </div>
               <div class="mini_box float_left">
-                <img src="img/hubspotblog.svg"  alt="HubSpotBlog" class="box_image" id="blogs"></img>
+                <img src="img/hubspotblog.svg"  alt="HubSpotBlog" class="box_image" ></img>
                 <h1>4,5M+</h1>
                 <span>monthly visit</span>
               </div>
               <div class="mini_box float_left">
-                <img  src="img/academy.svg" alt="Academy" class="box_image" id="academy"></img>
+                <img  src="img/academy.svg" alt="Academy" class="box_image" ></img>
                 <h1>155k+</h1>
                 <span>certified professionals</span>
               </div>
               <div class="mini_box float_left">
-                <img src="img/inbound.svg" alt="Inbound" class="box_image" id="inbound"></img>
+                <img src="img/inbound.svg" alt="Inbound" class="box_image" ></img>
                 <h1>21k+</h1>
                 <span>registered attendees</span>
               </div>
@@ -169,22 +169,22 @@
 
             <div class="box_row_down">
               <div class="mini_box float_left">
-                <img src="img/hubspotconnect.svg" alt="hubspotconnect" class="box_image" id="connect"></img>
+                <img src="img/hubspotconnect.svg" alt="hubspotconnect" class="box_image"></img>
                 <h1>200+</h1>
                 <span>integrations</span>
               </div>
               <div class="mini_box float_left">
-                <img src="img/communityglobe.svg" alt="Community Globe" class="box_image" id="world"></img>
+                <img src="img/communityglobe.svg" alt="Community Globe" class="box_image" ></img>
                 <h1>6+</h1>
                 <span>languages</span>
               </div>
               <div class="mini_box float_left">
-                <img src="img/communityfollowers.svg" alt="Community Followers" class="box_image" id="chat"></img>
+                <img src="img/communityfollowers.svg" alt="Community Followers" class="box_image"></img>
                 <h1>2.6+M</h1>
                 <span>social followers</span>
               </div>
               <div class="mini_box float_left">
-                <img src="img/growthhub.svg" alt="growthHub" class="box_image" id="growthub"></img>
+                <img src="img/growthhub.svg" alt="growthHub" class="box_image"></img>
                 <h1>5k+</h1>
                 <span>profiles and counting</span>
               </div>
