--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -7,29 +7,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&family=Nunito+Sans:wght@400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
     <title>Hubspot Bonus</title>
-    <!-- Lista lingue -Mid layer & Footer Revamp-->
+    <!-- Liste -Mid layer & Footer Revamp-->
   </head>
   <body>
 
     <!-- Fixed Navigator -->
     <div class="fixed_container">
       <nav class="clearfix">
-        <ul class="float_left chevron">
-          <li class="horizontal"><a class="enlight blue_shade" href="#"><i class="fas fa-globe-europe"></i> English <i class="fas fa-chevron-down"> </i></a>
-            <ul>
-              <li class="hidden"><a class="enlight blue_shade" href="#">Deutesch</a></li>
-              <li class="hidden"><a class="enlight blue_shade" href="#">日本人</a></li>
-              <li class="hidden"><a class="enlight blue_shade" href="#">Español</a></li>
-              <li class="hidden"><a class="enlight blue_shade" href="#">Português</a></li>
-              <li class="hidden"><a class="enlight blue_shade" href="#">Français</a></li>
-            </ul>
-          </li>
+        <ul class="float_left chevron"><a class="enlight blue_shade" href="#"><i class="fas fa-globe-europe"></i> English <i class="fas fa-chevron-down"></i></a>
+          <div class="fixed_dropdown_menu">
+            <li class="hidden"><a class="redlight blue_shade" href="#">Deutesch</a></li>
+            <li class="hidden"><a class="redlight blue_shade" href="#">日本語</a></li>
+            <li class="hidden"><a class="redlight blue_shade" href="#">Español</a></li>
+            <li class="hidden"><a class="redlight blue_shade" href="#">Português</a></li>
+            <li class="hidden"><a class="redlight blue_shade" href="#">Français</a></li>
+          </div>
         </ul>
-        <ul class="blue_shade horizontal"> |
+        <ul class="blue_shade horizontal float_left"> |
           <li class="horizontal"><a class="enlight blue_shade" href="#">Contact Us</a></li>
         </ul>
+
         <ul class="float_right">
-          <li class="horizontal"><a class="enlight" href="#"><i class="fas fa-search"></i></a></li>
+          <li class="horizontal"><input type="search" placeholder=" Search here" name="" value=""><a class="enlight" href="#"><i class="fas fa-search"></i></a></li>
           <li class="horizontal"><a href="#">Log in</a></li>
           <li class="horizontal"><a class="orange_button" href="#">GetHubSpotFree</a></li>
         </ul>
@@ -41,12 +40,43 @@
     <header>
       <nav class="clearfix">
         <img class="float_left" src="img/logo.svg" alt="Logo">
-        <ul class="float_right">
-          <li class="horizontal"><a class="enlight blue_shade" href="#">Software<i class="fas fa-chevron-down"></i></a></li>
-          <li class="horizontal"><a class="enlight blue_shade" href="#">Pricing</a></li>
-          <li class="horizontal"><a class="enlight blue_shade" href="#">Resources<i class="fas fa-chevron-down"></i></a></li>
-          <li class="horizontal"><a class="enlight blue_shade" href="#">Partners<i class="fas fa-chevron-down"></i></a></li>
-          <li class="horizontal"><a class="enlight blue_shade" href="#">About<i class="fas fa-chevron-down"></i></a></li>
+        <ul class="float_right chevron"><a class="enlight blue_shade" href="#">Partners<i class="fas fa-chevron-down"></i></a>
+          <div class="header_dropdown">
+            <li class="hidden"><a class=" blue_shade" href="#">Awsome Partner</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">Fabolous Partner</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">Special Partner</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">Partner Partner</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">Is this your Partner?</a></li>
+          </div>
+        </ul>
+        <ul class="float_right chevron"><a class="enlight blue_shade" href="#">About<i class="fas fa-chevron-down"></i></a>
+          <div class="header_dropdown">
+            <li class="hidden"><a class=" blue_shade" href="#">What About It?</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">About that...</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">About About</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">About?! </a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">No Clue</a></li>
+          </div>
+        </ul>
+        <ul class="float_right chevron"><a class="enlight blue_shade" href="#">Resources<i class="fas fa-chevron-down"></i></a>
+          <div class="header_dropdown">
+            <li class="hidden"><a class=" blue_shade" href="#">Super Resource</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">Huge Resource</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">Friend Resources</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">Hidden Resource</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">Resource Resource?</a></li>
+          </div>
+        </ul>
+        <ul class="float_right"><a class="enlight blue_shade" href="#">Pricing</a>
+        </ul>
+        <ul class="float_right chevron"><a class="enlight blue_shade" href="#">Software<i class="fas fa-chevron-down"></i></a>
+          <div class="header_dropdown">
+            <li class="hidden"><a class=" blue_shade" href="#">Awsome Software</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">Fabolous Software</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">Special Software</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">Software Software</a></li>
+            <li class="hidden"><a class=" blue_shade" href="#">Is this a Software?</a></li>
+          </div>
         </ul>
       </nav>
 
