--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -16,11 +16,11 @@
       <nav class="clearfix">
         <ul class="float_left chevron"><a class="enlight blue_shade" href="#"><i class="fas fa-globe-europe"></i> English <i class="fas fa-chevron-down"></i></a>
           <div class="fixed_dropdown_menu">
-            <li class="hidden"><a class="redlight blue_shade" href="#">Deutesch</a></li>
-            <li class="hidden"><a class="redlight blue_shade" href="#">日本語</a></li>
-            <li class="hidden"><a class="redlight blue_shade" href="#">Español</a></li>
-            <li class="hidden"><a class="redlight blue_shade" href="#">Português</a></li>
-            <li class="hidden"><a class="redlight blue_shade" href="#">Français</a></li>
+            <li class="hidden redlight"><a class=" blue_shade" href="#">Deutesch</a></li>
+            <li class="hidden redlight"><a class=" blue_shade" href="#">日本語</a></li>
+            <li class="hidden redlight"><a class=" blue_shade" href="#">Español</a></li>
+            <li class="hidden redlight"><a class=" blue_shade" href="#">Português</a></li>
+            <li class="hidden redlight"><a class=" blue_shade" href="#">Français</a></li>
           </div>
         </ul>
         <ul class="blue_shade horizontal float_left"> |
