--- a/Bonus/index.html
+++ b/Bonus/index.html
@@ -252,7 +252,7 @@
               <div class="mini_trial">Get started with FREE tools, or get more with our premium software.</div>
             </div>
             <div class="right_downframe float_left">
-              <img src="img/woman.webp" alt="">
+              <img src="img/dude.webp" alt="">
             </div>
           </div>
         </div>
